--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-responsive": "^10.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
